[package]
name = "ed-parse-log-files"
version = "0.1.0"
edition = "2024"
authors = ["Reinier Balt <lrbalt@gmail.com>"]
description = "A library to read log files from Elite Dangerous"
license = "MIT"
keywords = ["space-sim", "elite dangerous"]
categories = ["game-development"]
publish = false

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.140" }
chrono = { version = "0.4.39", features=["serde"] }
ed-parse-log-file-testcase = { path = "ed-parse-log-file-testcase" }

[dev-dependencies]
rayon = { version = "1.10.0" }
thiserror = { version = "2.0.12" }
numfmt = { version = "1.1.1" }
prettytable-rs = { version = "0.10.0", default-features = false}
itertools = { version = "0.14.0"}